tests/ui/impl-trait/non-defining-uses/ice-issue-146191.next.stderr
error[E0282]: type annotations needed
  --> $DIR/ice-issue-146191.rs:8:5
   |
LL |     async { create_complex_future().await }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
